syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ItemCostList.proto";

message AvatarExpUpCsReq {
    ItemCostList item_cost_list = 8;
    uint32 base_avatar_id = 2;
}