syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message MarkAvatarCsReq {
	bool is_marked = 10;
	uint32 avatar_id = 5;
}